Fix spacing of cards, add in Bootstrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,39 @@
-.App{
+.App {
   min-height: 100vh;
   background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
 }
 
-.search-form{
+.search-form {
   min-height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.search-bar{
+.search-bar {
   width: 50%;
   border: none;
   padding: 10px;
 }
 
-.search-button{
+.search-button {
   background: lightcoral;
   border: none;
   padding: 10px 20px;
   color: white;
 }
 
-.recipes{
+.recipes {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+}
+
+h1 {
+  font-size: 50px;
+  margin: 10px;
+}
+
+.row {
+  padding: 20px;
 }
